--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "node": "12"
   },
   "dependencies": {
-    "@angular/cli": "~10.0.5",
+    "@angular-devkit/core": "^11.0.2",
+    "@angular-devkit/schematics": "^11.0.2",
+    "@angular/cli": "^10.0.5",
     "@angular/common": "~10.0.0",
     "@angular/compiler": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
@@ -31,6 +33,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/angular-toolkit": "^2.3.0",
+    "@ionic/storage": "^2.3.1",
     "express": "^4.17.1",
     "firebase": "^8.0.0",
     "rxjs": "~6.5.5",
@@ -40,7 +43,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.0",
-    "@angular/cli": "~10.0.5",
+    "@angular/cli": "^10.0.5",
     "@angular/compiler": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
     "@angular/language-service": "~10.0.0",
